--- a/ContactBook-2.0/app/src/main/res/layout/listview.xml
+++ b/ContactBook-2.0/app/src/main/res/layout/listview.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="姓名"
-        android:textSize="30sp"
+        android:textSize="@dimen/font"
         android:textColor="@color/colorPrimaryDark"
         android:layout_marginLeft="5dp"/>
 </LinearLayout>
