--- a/ContactBook-2.0/app/src/main/res/layout/activity_add.xml
+++ b/ContactBook-2.0/app/src/main/res/layout/activity_add.xml
@@ -32,46 +32,52 @@
                     android:id="@+id/et_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/editsharp"
                     android:textColor="@color/colorPrimaryDark"
                     tools:hint="name"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/phone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="手机："
+                    android:text="手机1："
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/font"/>
                 <EditText
                     android:id="@+id/et_phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/editsharp"
                     android:textColor="@color/colorPrimaryDark"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="其他手机："
+                    android:text="手机2："
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/font"/>
                 <EditText
                     android:id="@+id/et_phone2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/editsharp"
                     android:textColor="@color/colorPrimaryDark"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/textView4"
@@ -84,12 +90,14 @@
                     android:id="@+id/et_sex"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/editsharp"
                     android:textColor="@color/colorPrimaryDark"/>
 
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/textView11"
@@ -103,11 +111,13 @@
                     android:id="@+id/et_company"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/editsharp"
                     android:textColor="@color/colorPrimaryDark"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/phone2"
@@ -120,18 +130,19 @@
                     android:id="@+id/et_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/editsharp"
                     android:textColor="@color/colorPrimaryDark"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/army_friends"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
                     android:text="战友："
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/font"/>
@@ -139,11 +150,14 @@
                     android:id="@+id/edit_army_friends"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/colorPrimaryDark"/>
+                    android:hint="@string/hint"
+                    android:textColorHint="@color/textColorHint"
+                    android:background="@drawable/editsharp"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/friends"
@@ -156,17 +170,20 @@
                     android:id="@+id/edit_friends"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColorHint="@color/textColorHint"
+                    android:hint="@string/hint"
+                    android:background="@drawable/editsharp"
                     android:textColor="@color/colorPrimaryDark"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/classmates"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
                     android:text="同学："
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/font"/>
@@ -174,11 +191,15 @@
                     android:id="@+id/ed_classmates"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColorHint="@color/textColorHint"
+                    android:hint="@string/hint"
+                    android:background="@drawable/editsharp"
                     android:textColor="@color/colorPrimaryDark"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/family"
@@ -191,11 +212,15 @@
                     android:id="@+id/edit_family"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColorHint="@color/textColorHint"
+                    android:hint="@string/hint"
+                    android:background="@drawable/editsharp"
                     android:textColor="@color/colorPrimaryDark"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/fellow_townsman"
@@ -208,16 +233,19 @@
                     android:id="@+id/edit_fellow_townsman"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColorHint="@color/textColorHint"
+                    android:hint="@string/hint"
+                    android:background="@drawable/editsharp"
                     android:textColor="@color/colorPrimaryDark"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/textView9"
                     android:layout_width="wrap_content"
-
                     android:layout_height="wrap_content"
                     android:text="头像："
                     android:textColor="@color/colorPrimaryDark"
@@ -231,12 +259,11 @@
             </LinearLayout>
             <Button
                 android:id="@+id/sure"
+                android:layout_marginTop="5dp"
                 android:layout_width="80dp"
                 android:layout_height="40dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/edit_fellow_townsman"
-                android:background="@color/colorPrimaryDark"
+                android:background="@drawable/editsharp"
+                android:layout_gravity="center"
                 android:onClick="sure"
                 android:text="确定"/>
         </LinearLayout>
