--- a/ContactBook-2.0/app/src/main/res/layout/item_simple.xml
+++ b/ContactBook-2.0/app/src/main/res/layout/item_simple.xml
@@ -3,16 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:orientation="vertical">
+              android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="left"
         android:layout_marginTop="8dp"
+        android:layout_marginLeft="38dp"
         android:text="认证服务"
-        android:textColor="#393939"
-        android:textSize="14sp" />
+        android:background="@drawable/editsharp"
+        android:textSize="20sp" />
 
 </LinearLayout>
