--- a/ContactBook-2.0/app/src/main/res/layout/listview.xml
+++ b/ContactBook-2.0/app/src/main/res/layout/listview.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-
+    android:layout_height="55dp"
     android:gravity="center">
-
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@drawable/photo"
-        />
+        android:src="@drawable/ic_person_black_48dp"/>
 
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="姓名"
-        android:textSize="30sp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textSize="@dimen/font"
+        android:paddingLeft="20dp"
         android:layout_marginLeft="5dp"/>
 </LinearLayout>
