--- a/ContactBook-2.0/app/src/main/res/values/colors.xml
+++ b/ContactBook-2.0/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#213fe4</color>
+    <color name="colorPrimary">#259b24</color>
     <color name="colorPrimaryDark">#259b24</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#259b24</color>
+    <color name="textColorHint">#F00</color>
 </resources>
