--- a/ContactBook-2.0/app/src/main/res/values/dimens.xml
+++ b/ContactBook-2.0/app/src/main/res/values/dimens.xml
@@ -3,7 +3,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="font">20sp</dimen>
-    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="hint_font">12sp</dimen>
+    <dimen name="app_bar_height">256dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
 </resources>
