--- a/ContactBook-2.0/app/src/main/res/layout/activity_sorted_by_company.xml
+++ b/ContactBook-2.0/app/src/main/res/layout/activity_sorted_by_company.xml
@@ -21,16 +21,6 @@
             android:layout_height="40dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="add"
-            android:paddingBottom="200dp" android:paddingTop="500dp"
-            android:src="@drawable/add_user"
-            app:layout_anchorGravity="bottom|end"
-            android:layout_alignParentTop="true" android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"/>
     </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
@@ -40,5 +30,21 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/linearLayout" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="77dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
+        android:onClick="add"
+        android:paddingBottom="200dp"
+        android:paddingTop="500dp"
+        android:src="@drawable/add_user"
+        app:layout_anchorGravity="bottom|end" />
 </RelativeLayout>
 
