--- a/ContactBook-2.0/app/src/main/res/layout/rv_company.xml
+++ b/ContactBook-2.0/app/src/main/res/layout/rv_company.xml
@@ -4,10 +4,10 @@
     android:layout_height="55dp"
     android:gravity="center">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:src="@drawable/f" />
 
     <TextView
