--- a/ContactBook-2.0/app/src/main/res/layout/activity_look.xml
+++ b/ContactBook-2.0/app/src/main/res/layout/activity_look.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="cn.contactbook.androidUI.LookActivity">
+    tools:context="cn.contactbook.androidUI.DetailActivity">
 
 
     <TextView
