--- a/ContactBook-2.0/app/src/main/res/layout/activity_main.xml
+++ b/ContactBook-2.0/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,7 @@
                 android:layout_height="match_parent"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-
                 tools:context=".androidUI.MainActivity">
 
     <RelativeLayout
@@ -18,35 +15,33 @@
         android:orientation="horizontal" android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true" android:layout_alignParentStart="true">
 
-        <SearchView
+        <android.support.v7.widget.SearchView
             android:id="@+id/searchView"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_alignParentLeft="true"
-<<<<<<< HEAD
-            android:layout_alignParentStart="true" />
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="add"
-            android:paddingBottom="200dp" android:paddingTop="500dp"
-            android:src="@drawable/add_user"
-            app:layout_anchorGravity="bottom|end"
-            android:layout_alignParentTop="true" android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"/>
-=======
-            android:layout_alignParentStart="true"
-            android:layout_toLeftOf="@+id/button" />
+            android:layout_centerInParent="true"
+            android:layout_width="match_parent"
+            android:layout_height="40dp" />
 
->>>>>>> 4667a2d0ee8717b2569167b14eab8f5caa190e5a
     </RelativeLayout>
 
-    <ListView
-        android:id="@+id/listView"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/activity_vertical_margin"
+        android:layout_below="@+id/linearLayout" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/linearLayout" />
+        android:onClick="add"
+        android:paddingBottom="200dp" android:paddingTop="500dp"
+        android:src="@drawable/add_user"
+        app:layout_anchorGravity="bottom|end"
+        android:layout_marginRight="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="77dp" />
 </RelativeLayout>
