--- a/ContactBook-2.0/app/src/main/res/values/dimens.xml
+++ b/ContactBook-2.0/app/src/main/res/values/dimens.xml
@@ -1,10 +1,11 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">20dp</dimen>
     <dimen name="font">20sp</dimen>
     <dimen name="hint_font">12sp</dimen>
     <dimen name="app_bar_height">256dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="item_space">10dp</dimen>
 </resources>
